# hyprsink

./: CLAUDE.md  Cargo.toml  README.md  install.sh  justfile  uninstall.sh
.serena/memories/: codebase_structure.md  project_overview.md  suggested_commands.md
assets/defaults/: presets.conf
assets/examples/config/: dictionary.toml  layout.toml
assets/templates/: brave.tpl  hyprsbar.tpl  python.tpl  stylus.tpl
benches/: config_bench.rs  db_bench.rs  pack_bench.rs  tera_bench.rs
src/: config.rs  db.rs  logger.rs  template.rs
src/cli/: args.rs  logging.rs
src/cli/commands/: mod.rs
tests/: hyprsbar_template.rs
