[package]
name = "hyprsink"
version = "0.4.0"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender", "dep:tracing-log"]

[lib]
name = "hyprsink"

[[bin]]
name = "hyprsink"
path = "src/bin/hyprsink.rs"
required-features = ["cli"]

[dependencies]
# Core (always)
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "1"
directories = "6"
dirs-next = "2.0"
colored = "3"
thiserror = "2.0"
lazy_static = "1.5"
zip = "8"
tera = "1.20"
anyhow = "1.0"
chrono = "0.4"
libc = "0.2"
wincode = { version = "0.4", features = ["derive"] }
hyprs-conf = { git = "https://github.com/ryugen-io/hyprs-conf.git", branch = "main" }
hyprs-log = { git = "ssh://git@github.com/ryugen-io/hyprs-log.git", branch = "main", default-features = false }

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-log = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1.0"
assert_cmd = "2.0"
predicates = "3.1"

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "tera_bench"
harness = false

[[bench]]
name = "pack_bench"
harness = false

[[bench]]
name = "render_bench"
harness = false

[[bench]]
name = "db_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
